--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@reach/combobox": "^0.12.1",
         "@react-google-maps/api": "^2.1.0",
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
@@ -11,6 +12,7 @@
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-scripts": "4.0.1",
+        "use-places-autocomplete": "^1.7.1",
         "web-vitals": "^0.2.4"
     },
     "scripts": {
