--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
         "date-fns": "^2.16.1",
+        "firebase": "^8.2.2",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
+        "react-firebaseui": "^4.1.0",
         "react-scripts": "4.0.1",
         "use-places-autocomplete": "^1.7.1",
         "web-vitals": "^0.2.4"
@@ -19,7 +21,8 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "deploy": "firebase deploy"
     },
     "eslintConfig": {
         "extends": [
