--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@babel/plugin-proposal-decorators": "^7.12.12",
         "@reach/combobox": "^0.12.1",
         "@react-google-maps/api": "^2.1.0",
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
+        "customize-cra": "^1.0.0",
         "date-fns": "^2.16.1",
         "firebase": "^8.2.2",
+        "mobx": "^6.0.4",
+        "mobx-react-lite": "^3.1.6",
         "react": "^17.0.1",
+        "react-app-rewired": "^2.1.8",
         "react-dom": "^17.0.1",
         "react-firebaseui": "^4.1.0",
         "react-scripts": "4.0.1",
@@ -18,10 +23,10 @@
         "web-vitals": "^0.2.4"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject",
+        "start": "react-app-rewired start",
+        "build": "react-app-rewired build",
+        "test": "react-app-rewired test",
+        "eject": "react-app-rewired eject",
         "deploy": "firebase deploy"
     },
     "eslintConfig": {
