--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "dependencies": {
         "@babel/plugin-proposal-decorators": "^7.12.12",
         "@reach/combobox": "^0.12.1",
+        "@reach/dialog": "^0.12.1",
+        "@reach/visually-hidden": "^0.12.0",
         "@react-google-maps/api": "^2.1.0",
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
